samples/_failures_safe/1761194285_d60c38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f80864b8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f80864b8.c:169:13: error: expected declaration or statement at end of input
  169 |             if (visited[v] == 0 && dist[v] <= min_dist) {
      |             ^~
./samples/SAFE/__tmp_f80864b8.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80864b8.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f80864b8.c:169:13: error: expected declaration or statement at end of input
